create js code in ejs file

--- a/views/lists.ejs
+++ b/views/lists.ejs
@@ -6,6 +6,10 @@
     <title>ToDoList</title>
 </head>
 <body>
-    <h1>It's a <%= kindOfDay %> </h1>
+  <% if(kindOfDay === "Saturday" || kindOfDay === "Sunday" || kindOfDay === "Friday") { %>
+        <h1 style="color: purple;">It's a <%= kindOfDay %> </h1>
+  <% } else { %>
+    <h1 style="color: red;">It's a <%= kindOfDay %> </h1>
+  <% } %>
     </body>
 </html>
