--- a/views/lists.ejs
+++ b/views/lists.ejs
@@ -1,32 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
+<%- include("header"); -%>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ToDoList</title>
-</head>
 
-<body>
+<div class="header">
     <% if(kindOfDay === "Saturday" || kindOfDay === "Sunday" || kindOfDay === "Friday") { %>
     <h1 style="color: purple;">It's a <%= kindOfDay %> </h1>
     <% } else { %>
-    <h1 style="color: red;">It's a <%= kindOfDay %> </h1>
+    <h1 style="color: white;">It's a <%= kindOfDay %> </h1>
     <% } %>
-
+</div>
+<div class="table-list">
     <ul>
-        <li>byu food</li>
+        <!-- <li>byu food</li>
         <li>cook food</li>
-        <li>eat food</li>
-       <% for (var i = 0; i<orderLists.length;i++) { %>
-          <li><%= orderLists[i] %></li>
-       <% } %>
+        <li>eat food</li> -->
+        <% for (var i = 0; i<orderLists.length;i++) { %>
+        <li><%= orderLists[i] %></li>
+        <% } %>
     </ul>
 
     <form action="/" method="POST">
-    <input type="text" name="list">
-    <button type="submit"> send</button>
+        <input type="text" name="list" placeholder="new item" autocomplete="off">
+        <button class="myButton"  type="submit" name="lists" value=<%= kindOfDay %>> +</button>
+    
     </form>
-</body>
+</div>
 
-</html>
+<%- include("footer"); -%>
